# fleet_management

./: .coveragerc  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE.md  README.md  ccu_gui.cpp  docker-compose.yml  fms.rosinstall  install.sh  install_fms.sh  install_fms_native_1.sh  install_fms_requirements.sh  install_native_v2_1.sh  install_native_v2_2.sh  install_simulator.sh  install_simulator_requirements.sh  requirements.txt  setup.py  sonar-project.properties  window.cpp  window.h
.github/workflows/: fms-ci.yml
.gitlab/: docker-compose.yml
.travis/: docker-compose.yml  lint.py
NewInstallation/: Dockerfile  install_FMS.sh  install_ROS.sh  install_docker.sh  scratch.sh  test.sh
config/: ccu_config.yaml  fms_config-v2.yaml  logging.yaml  ropods.yaml
config/fleet/: ropod_001.yaml  ropod_002.yaml  ropod_003.yaml  ropod_004.yaml
config/task_domains/agaplesion/: hospital_transportation.pddl  sample_mobidik_transportation_problem.pddl
docs/: conf.py  elevator-messages.md  fms.rst  index.rst  limitations.rst  plugins.rst  ropod-commands.md  task-messages.md  tests.rst  user-requests.md
docs/classes/: fmlib.rst
docs/html/: fms.html  genindex.html  index.html  intro.html  limitations.html  objects.inv  plugins.html  py-modindex.html  search.html  searchindex.js  setup.html  tests.html
docs/html/_sources/: intro.rst.txt  plugins.rst.txt  setup.md.txt  tests.rst.txt
docs/html/_sources/modules/: resources.rst.txt
docs/html/modules/: api.html  db.html  resources.html  tasks.html
docs/html/modules/db/: builders.html  interfaces.html
docs/html/modules/plugins/: mrta.html  osm.html  task_planner.html
docs/modules/: api.rst  db.rst  resources.rst  tasks.rst
docs/modules/db/: interfaces.rst
docs/modules/db/models/: index.rst
docs/modules/plugins/: mrta.rst  osm.rst  task_planner.rst
fleet_management/: __init__.py  ccu.py  obl_to_fms_adapter.py  path_planner.py  resource_manager.py  task_allocator.py  task_manager.py  task_planner.py  task_planner_interface.py
fleet_management/allocation/: auctioneer.py
fleet_management/api/: __init__.py  api.py  rest.py  ros.py  zyre.py
fleet_management/api/interfaces/: query.py
fleet_management/api/rest/: interface.py
fleet_management/config/: builder.py  config.py  config_file_reader.py  loader.py  params.py
fleet_management/config/default/: config.yaml  fms_config-v2.yaml
fleet_management/config/templates/: fms_config-v2.yaml
fleet_management/config/topology/: config.yaml
fleet_management/db/: ccu_store.py  init_db.py  mongo.py  query_interface.py
fleet_management/db/models/: actions.py  elevator.py  environment.py  messages.py  path.py  robot.py  task.py  users.py
fleet_management/db/models/robot/: robot.py  status.py  version.py
fleet_management/db/models/ropod/: actions.py  elevator.py  ropod.py  task.py
fleet_management/db/queries/: robot.py
fleet_management/db/queries/interfaces/: tasks.py
fleet_management/db/queries/sets/: robot.py  tasks.py
fleet_management/db/querysets/: elevators.py
fleet_management/exceptions/: osm_planner_exception.py  planning.py  task_allocator.py
fleet_management/models/: elevator.py  robot.py  subareas.py
fleet_management/overpass/: api.py
fleet_management/path_planning/: __init__.py  global_path_planner.py  local_path_planner.py  node.py  visited_node.py
fleet_management/pathplanner/: __init__.py  router.py  way.py
fleet_management/plugins/: planning.py  task_planner.py
fleet_management/plugins/mrta/: __init__.py  bidder.py  robot.py  schedule_execution_monitor.py  timetable_monitor.py
fleet_management/plugins/osm/: __init__.py  bridge.py  path_planner.py  plugin.py  subarea_monitor.py
fleet_management/plugins/topology/: __init__.py  map_loader.py  path_planner.py  planner_area.py  plot_map.py  plugin.py
fleet_management/proxies/: robot.py
fleet_management/resources/fleet/: monitoring.py
fleet_management/resources/infrastructure/: __init__.py  brsu.py
fleet_management/resources/infrastructure/elevators/: interface.py  manager.py  (+1 more)
fleet_management/resources/monitoring/: osm_sub_area_monitor.py
fleet_management/scripts/: generate_robot_config.py
fleet_management/structs/: __init__.py  action.py  area.py  elevator.py  robot.py  status.py  task.py
fleet_management/task/: dispatcher.py  manager.py  monitor.py
fleet_management/task_allocation/: __init__.py  auctioneer.py  docker_robot.py  logs  robot.py
fleet_management/test/: elevator_monitor_test.py  elevator_request_test.py  path_planner_test.py  personal_test.py  query_interface_test.py  resource_manager_mockup.py  resource_manager_test.py  resource_monitor_mockup.py  ropod_monitor_test.py  september_demo.py  sequential_task_request_test.py  sub_area_management_test.py  task_allocator_test.py  task_planner_test.py  task_request_test.py  test.py  two_tasks_request_test.py
fleet_management/test/fixtures/: message_sender.py  robots.py  utils.py
fleet_management/test/integration/: resource_manager_mockup.py  test_ropod_elevators.py
fleet_management/utils/: messages.py
include/: ccu_manager.hpp  ccu_manager_gui.hpp  msg_params.hpp  path_planner.hpp  resource_manager.hpp  task_executor.hpp  task_manager.hpp  task_planner.hpp
include/config/: config_file_reader.hpp  config_params.hpp
include/data_structures/: action.hpp  area.hpp  elevator_requests.hpp  robot.h  robot_status.hpp  robot_task.hpp  task.hpp  task_request.hpp  task_status.hpp  waypoint.hpp
include/db/: ccu_store.hpp
include/experiments/: mobidik_elevator.h
src/: ccu.cpp  ccu_cli.cpp  ccu_manager.cpp  ccu_manager_gui.cpp  msg_params.cpp  path_planner.cpp  resource_manager.cpp  task_executor.cpp  task_manager.cpp  task_planner.cpp
src/config/: config_file_reader.cpp
src/db/: ccu_store.cpp
src/experiments/: mobidik_elevator.cpp  mobidik_elevator_main.cpp
test/: CMakeLists.txt
test/config/msgs/elevator/: elevator-cmd-reply.json  ropod-elevator-request.json
test/include/: utils.h
test/src/: ccu_test.cpp  elevator_request_test.cpp  task_request_test.cpp
(+68 files in other folders)
